Clean VEViewController code. Added MBProgressHUD in demo code request.

--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -6,6 +6,8 @@
   Copyright (c) 2013 Veespo Ltd. All rights reserved.
 */
 
+"DemoCode Title" = "Inserisci il codice demo ed il tuo nome";
+
 "User Name" = "Nome Utente";
 
 "Categories voted" = "Categorie votate";
