--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -6,6 +6,8 @@
   Copyright (c) 2013 Veespo Ltd. All rights reserved.
 */
 
+"DemoCode Title" = "Insert Demo Code and Name";
+
 "User Name" = "User Name";
 
 "Categories voted" = "Categories voted";
