New section: Voted Venues.
New icons.

--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -35,3 +35,5 @@
 "Sport News" = "Sport News";
 
 "ESPN Top News" = "ESPN Top News";
+
+"No Votes" = "There aren't favorite places because you never voted";
