--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -35,3 +35,5 @@
 "Sport News" = "Notizie sportive";
 
 "ESPN Top News" = "ESPN Top News";
+
+"No Votes" = "Non abbiamo nessun locale preferito da farti vedere perché non hai mai votato";
