--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 
 "Feedback" = "Feedback";
 
-"DemoCode Title" = "Insert Demo Code and Name";
+"DemoCode Title" = "Insert Veespo Code and Name";
 
 "User Name" = "User Name";
 
@@ -18,7 +18,7 @@
 
 "Alert" = "Attention";
 
-"Fill Form" = "Enter a demo code (or select an existing category rated) and enter the user name";
+"Fill Form" = "Enter a Veespo code (or select an existing category rated) and enter the user name";
 
 "Veespo Question" = "What is your opinion about %@?";
 
@@ -37,3 +37,5 @@
 "ESPN Top News" = "ESPN Top News";
 
 "No Votes" = "There aren't favorite places because you never voted";
+
+"Favorites" = "Favorites";
