Added AFNetworking directly in the project.
NavigationBar with translucent = NO (iOS7)

New UI for Venues detail with Veespo output.

Change from Veespo sandbox to production

--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   Copyright (c) 2013 Veespo Ltd. All rights reserved.
 */
 
-"Feedback" = "Feedback";
+"Feedback" = "Vote";
 
 "DemoCode Title" = "Insert Veespo Code and Name";
 
