--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   Copyright (c) 2013 Veespo Ltd. All rights reserved.
 */
 
-"Feedback" = "Valuta";
+"Feedback" = "Vota";
 
 "DemoCode Title" = "Inserisci il codice Veespo ed il tuo nome";
 
