First release to Apple Store.
Fix problem in RSS news voting.

--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -38,6 +38,6 @@
 
 "No Votes" = "There aren't favorite places because you never voted";
 
-"Favorites" = "Favorites";
+"Favorites" = "Bookmarks";
 
 "No Demo" = "Without Code";
