--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -38,6 +38,6 @@
 
 "No Votes" = "Non abbiamo nessun locale preferito da farti vedere perché non hai mai votato";
 
-"Favorites" = "Preferiti";
+"Favorites" = "Locali votati";
 
 "No Demo" = "Senza Codice";
