Redesign détail venues UI.

--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -45,3 +45,7 @@
 "Around me" = "Around me";
 
 "News" = "News";
+
+"Venue tags" = "The views of users";
+
+"Average Votes" = "AVERAGE USER RATING";
