--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -45,3 +45,7 @@
 "Around me" = "Intorno a te";
 
 "News" = "Notizie";
+
+"Venue tags" = "Il parere degli utenti";
+
+"Average Votes" = "MEDIA DEI VOTI";
