New UI in Venues list.
Avenir font set in all views.

Fix some minor bugs.

--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -8,9 +8,9 @@
 
 "Feedback" = "Vote";
 
-"DemoCode Title" = "Insert Category Code and Name";
+"DemoCode Title" = "Insert Category Code and your name";
 
-"User Name" = "User Name";
+"User Name" = "Personal name";
 
 "Categories voted" = "Categories voted";
 
