--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 
 "DemoCode Title" = "Inserisci il Codice della Categoria ed il tuo nome";
 
-"User Name" = "Nome Utente";
+"User Name" = "Il proprio nome";
 
 "Categories voted" = "Categorie votate";
 
