Add “Pull to refresh” function to venues tableview, to reload user position and venues list.
Fix bug in user position update.

--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -49,3 +49,7 @@
 "Venue tags" = "The views of users";
 
 "Average Votes" = "AVERAGE USER RATING";
+
+"Pull" = "Pull to Refresh";
+
+"Refresh" = "Refreshing position and data...";
