--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -49,3 +49,7 @@
 "Venue tags" = "Il parere degli utenti";
 
 "Average Votes" = "MEDIA DEI VOTI";
+
+"Pull" = "Trascina per aggiornare";
+
+"Refresh" = "Aggiornamento posizione e locali...";
