Remove VERootViewController reference and update all classes child of VERootViewController

--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -53,3 +53,5 @@
 "Pull" = "Pull to Refresh";
 
 "Refresh" = "Refreshing position and data...";
+
+"Veespo Error" = "There's a problem. Try later...";
