--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -53,3 +53,5 @@
 "Pull" = "Trascina per aggiornare";
 
 "Refresh" = "Aggiornamento posizione e locali...";
+
+"Veespo Error" = "Si è verificato un errore. Riprova più tardi...";
