New section in side panel menu.

--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -55,3 +55,5 @@
 "Refresh" = "Aggiornamento posizione e locali...";
 
 "Veespo Error" = "Si è verificato un errore. Riprova più tardi...";
+
+"About us" = "Chi siamo";
