Change UI colors

--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -57,3 +57,5 @@
 "Veespo Error" = "Si è verificato un errore. Riprova più tardi...";
 
 "About us" = "Chi siamo";
+
+"Veespo Button" = "bottone_vota";
