--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -44,7 +44,7 @@
 
 "News" = "News";
 
-"Venue tags" = "Other users opinion";
+"Venue tags" = "Other users' opinions";
 
 "Pull" = "Pull to refresh";
 
@@ -58,4 +58,6 @@
 
 "Target List" = "Express your opinion on...";
 
-"App Feedback" =  "Give us a feedback";
+"App Feedback" =  "Give us feedback";
+
+"No Demo" = "I don't have a code";
