New View: top venues for a single tag

--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -65,3 +65,5 @@
 "Target List" = "Esprimi la tua opinione su...";
 
 "App Feedback" =  "Lasciaci un feedback";
+
+"Top Venues" = "I migliori locali";
