New questions in Veespo Framework

--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -18,9 +18,9 @@
 
 "Disclaimer" = "Type in your name and a Veespo code to start rating!";
 
-"Veespo Question" = "What do you think about %@?";
+"Veespo Question" = "Tell us your opinion!";
 
-"Veespo News Question" = "What is your opinion on '%@'?";
+"Veespo News Question" = "What do you think of this news?";
 
 "Wrong Code" = "The Veespo code is wrong";
 
