Test new panel for Veespo Framework

--- a/Veespo/Supporting Files/en.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/en.lproj/Localizable.strings
@@ -63,3 +63,7 @@
 "No Demo" = "I don't have a code";
 
 "Top Venues" = "The best venues";
+
+"Panel title 1" = "Your average";
+
+"Panel title 2" = "Global average";
