--- a/Veespo/Supporting Files/it.lproj/Localizable.strings
+++ b/Veespo/Supporting Files/it.lproj/Localizable.strings
@@ -67,3 +67,7 @@
 "App Feedback" =  "Lasciaci un feedback";
 
 "Top Venues" = "I migliori locali";
+
+"Panel title 1" = "La tua media";
+
+"Panel title 2" = "La media globale";
